<resources>
    <string name="app_name">Flownix</string>
    <string name="getStarted_message">Collaborate and Plan Together Across Multiple Devices on Flownix\'s minimalist Interface.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUp_message">Enter your name,email id and password,to register with us.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="image_contentDescription">image</string>

    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="myProfile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="fab">fab</string>
    <string name="no_boards_available">No Boards Available</string>
    <string name="created_by">Created By</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="select_members">Select Members</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>

    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_message_to_delete_card">Do you want to delete a Card \'%1$s\'?</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="default_notification_channel_id">Default Notification Channel</string>


</resources>