<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/item_board_content_marginBottom">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_board_content_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivBoardImage"
            android:layout_width="@dimen/item_board_image_size"
            android:layout_height="@dimen/item_board_image_size"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/ic_board_place_holder"
            app:civ_border_color="@color/primary_text_color"
            app:civ_border_width="@dimen/item_board_image_circular_border_width"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_board_image_layout_marginStart"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/item_board_name_text_size"
                tools:text="@string/board_name"/>
            <TextView
                android:id="@+id/tv_createdBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/item_board_name_text_size"
                tools:text="@string/created_by"/>

        </LinearLayout>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_board_divider_height"
        android:layout_marginTop="@dimen/item_board_divider_margin_top"
        android:background="@color/divider_color"
    />
</LinearLayout>