<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".screens.SigninActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFlownixSignIn"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/CustomToolbarStyle"
        android:gravity="center_vertical"
        android:paddingTop="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/cardHorizontalMargin"
        android:layout_marginVertical="@dimen/cardVerticalMargin"
        android:elevation="@dimen/cardViewElevation"
        app:cardCornerRadius="@dimen/cardCornerRadius"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarFlownixSignIn"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:layout_marginHorizontal="10dp"
            >


            <EditText
                android:id="@+id/et_email_Signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/editTextVerticalMargin"
                android:hint="@string/email"
                android:textColorHint="@color/text_color"/>

            <EditText
                android:id="@+id/et_password_Signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/editTextVerticalMargin"
                android:hint="@string/password"
                android:textColorHint="@color/text_color"/>


            <TextView
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/signUpButton_marginTop"

                android:background="@drawable/shape_button_rounded"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>